crates/fig-parser/tests/snapshots/integration_tests__annotations__multi_args.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations:
        - name: something
          args:
            - Path:
                segments:
                  - C
            - StringLiteral: hello world
      is_packed: true
      name:
        segments:
          - CPacked
      generic_params: []
      requires: []
      fields:
        - name: a
          ty: U8
          visibility: Default
          annotations: []
        - name: b
          ty: I32
          visibility: Default
          annotations: []
