crates/fig-parser/tests/snapshots/integration_tests__annotations__no_args.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations:
          - name: inline
            args: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: fast_add
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              BinaryOp:
                lhs:
                  Path:
                    segments:
                      - a
                op: Add
                rhs:
                  Path:
                    segments:
                      - b
  - Function:
      signature:
        visibility: Default
        annotations:
          - name: cold
            args: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: error_handler
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations:
          - name: no_mangle
            args: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: exported_c_fn
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
