crates/fig-parser/tests/snapshots/integration_tests__annotations__stacked.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations:
          - name: inline
            args: []
          - name: cold
            args: []
          - name: no_mangle
            args: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: multi_annotated
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Struct:
      visibility: Default
      annotations:
        - name: deprecated
          args: []
        - name: repr
          args:
            - Path:
                segments:
                  - C
      is_packed: false
      name:
        segments:
          - OldStruct
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: I32
          visibility: Default
          annotations: []
