crates/fig-parser/tests/snapshots/integration_tests__annotations__with_args.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations:
        - name: repr
          args:
            - Path:
                segments:
                  - C
      is_packed: false
      name:
        segments:
          - CCompatible
      generic_params: []
      requires: []
      fields:
        - name: a
          ty: I32
          visibility: Default
          annotations: []
        - name: b
          ty: I32
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations:
        - name: align
          args:
            - IntegerLiteral:
                base: Decimal
                digits: "16"
                suffix: ~
      is_packed: false
      name:
        segments:
          - AlignedData
      generic_params: []
      requires: []
      fields:
        - name: data
          ty:
            Array:
              element_type: U8
              size:
                IntegerLiteral:
                  base: Decimal
                  digits: "16"
                  suffix: ~
          visibility: Default
          annotations: []
  - FunctionDeclaration:
      signature:
        visibility: Default
        annotations:
          - name: link_name
            args:
              - StringLiteral: malloc
        is_extern: true
        is_effect: false
        receiver: ~
        name: c_malloc
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: size
            ty: USize
        return_types:
          - Pointer:
              nullable: false
              mutable: true
              element_type: U8
